<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.app99.cadeotelefone.ui.CheckinActivity">


  <TextView
      android:id="@+id/info_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_margin="16dp"
      android:visibility="gone"
      android:textSize="24sp"
      android:textStyle="bold"
      android:textColor="@android:color/black"
      android:text="@string/info_button"/>

  <TextView
      android:id="@+id/timeleft_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:textSize="14sp"
      android:visibility="invisible"
      android:textStyle="bold"
      android:textColor="@android:color/black"
      android:text="@string/timeleft"/>

  <TextView
      android:id="@+id/timeleft_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_toEndOf="@id/timeleft_text"
      android:textSize="14sp"
      android:visibility="visible"
      android:textStyle="bold"
      android:textColor="@android:color/holo_red_dark"
      tools:text="00:00:00"/>


  <RelativeLayout
      android:id="@+id/checkin_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true">

    <TextView
        android:id="@+id/check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:text="@string/do_check_in"/>

    <Button
        android:id="@+id/five_min_button"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@id/check_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/five_min"/>

    <Button
        android:id="@+id/ten_min_button"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@id/five_min_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/ten_min"/>

    <Button
        android:id="@+id/fifteen_min_button"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@id/ten_min_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/fifteen_min"/>

    <Button
        android:id="@+id/check_out_button"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@id/fifteen_min_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/checkout"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/check_out_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:text="@string/status_do_telefone"/>

    <TextView
        android:id="@+id/phone_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_out_button"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/textView2"
        android:maxLines="1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        tools:text="Check-in não realizado"/>

  </RelativeLayout>

  <View
      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      android:background="#77000000"/>

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:visibility="gone"/>

</RelativeLayout>
